--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,13 +16,23 @@
 
 .hero-section {
   background-image: url("/hero.png");
-  background-size: cover;
+  background-size: 100%;
   background-position: top center;
   background-repeat: no-repeat;
+  height: 130vh;
+}
+@media screen and (max-width: 768px) {
+  .hero-section {
+    background-image: url("/home-bg-2.png");
+    background-size: 100%;
+    height: 150vh;
+    background-position: 0px 94%;
+    border-bottom: 1px solid;
+  }
 }
 
 .flag-img {
-  top: 0;
+  top: 13%;
   right: 0;
 }
 .web-list {
@@ -90,4 +100,130 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+}
+
+.timeline {
+  position: relative;
+  max-width: 1200px;
+  margin: 100px auto;
+}
+
+.timeline::after {
+  content: "";
+  position: absolute;
+  width: 6px;
+  background-color: black;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -3px;
+}
+
+.timeline-wrapper {
+  padding: 0px 40px;
+  position: relative;
+  background-color: inherit;
+  width: 50%;
+}
+
+.timeline-wrapper::after {
+  content: "";
+  position: absolute;
+  width: 45px;
+  height: 45px;
+  right: -22.5px;
+  background-color: black;
+  border: 4px solid #fff;
+  top: -1px;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+.left {
+  left: 0;
+}
+
+.right {
+  left: 50%;
+}
+
+.left::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  top: 22px;
+  width: 0;
+  z-index: 1;
+  right: 30px;
+  border: medium solid white;
+  border-width: 10px 0 10px 10px;
+  border-color: transparent transparent transparent white;
+}
+
+.right::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  top: 22px;
+  width: 0;
+  z-index: 1;
+  left: 30px;
+  border: medium solid white;
+  border-width: 10px 10px 10px 0;
+  border-color: transparent white transparent transparent;
+}
+
+.right::after {
+  left: -22.5px;
+}
+
+.content {
+  padding: 0px 30px;
+  background-color: white;
+  position: relative;
+  border-radius: 6px;
+}
+
+@media screen and (max-width: 600px) {
+  .content {
+    padding: 0px 0px;
+  }
+  .timeline-wrapper {
+    width: 100%;
+    padding-right: 50px;
+    padding-left: 0px;
+  }
+
+  .timeline-wrapper::before {
+    left: 60px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+  }
+
+  .right {
+    left: 0%;
+  }
+
+  .left::after,
+  .right::after {
+    right: 0px;
+    width: 25px;
+    height: 25px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .timeline::after {
+    right: 10px;
+    left: auto;
+  }
+  .right::after {
+    right: 0 !important;
+    left: auto;
+  }
+  .timeline .content {
+    text-align: end;
+    margin-top: 60px;
+  }
 }
